--- a/index.html
+++ b/index.html
@@ -654,10 +654,10 @@
     <!-- Bottom -->
     <div class="bottom py-2 text-light" >
         <div class="container d-flex justify-content-between">
-            <div>
-                <p>Copyright © Your name</p><br>
-                <p>Distributed by: <a href="https://themewagon.com/">Themewagon</a></p>
-            </div>
+<!--             <div> -->
+<!--                 <p>Copyright © Your name</p><br> -->
+<!--                 <p>Distributed by: <a href="https://themewagon.com/">Themewagon</a></p> -->
+<!--             </div> -->
             <div>
                 <i class="fab fa-cc-visa fa-lg p-1"></i>
                 <i class="fab fa-cc-mastercard fa-lg p-1"></i>
